--- a/.github/workflows/scrapers.yml
+++ b/.github/workflows/scrapers.yml
@@ -2,18 +2,13 @@ name: NBA Data Scrapers
 
 on:
   schedule:
-    # Daily stats scraper - 8 AM UTC
+    # Run all scrapers once daily at 8 AM UTC
     - cron: '0 8 * * *'
-    # Value index - 9 AM UTC  
-    - cron: '0 9 * * *'
-    # Sentiment scraper - 10 AM UTC
-    - cron: '0 10 * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
   daily-stats:
     runs-on: ubuntu-latest
-    if: github.event.schedule == '0 8 * * *' || github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v3
       
@@ -37,7 +32,7 @@ jobs:
 
   value-index:
     runs-on: ubuntu-latest
-    if: github.event.schedule == '0 9 * * *' || github.event_name == 'workflow_dispatch'
+    needs: daily-stats
     steps:
       - uses: actions/checkout@v3
       
@@ -61,7 +56,7 @@ jobs:
 
   sentiment:
     runs-on: ubuntu-latest
-    if: github.event.schedule == '0 10 * * *' || github.event_name == 'workflow_dispatch'
+    needs: value-index
     steps:
       - uses: actions/checkout@v3
       
