--- a/.github/workflows/scrapers.yml
+++ b/.github/workflows/scrapers.yml
@@ -30,6 +30,8 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          HTTP_PROXY: ${{ secrets.HTTP_PROXY }}
+          HTTPS_PROXY: ${{ secrets.HTTPS_PROXY }}
         run: |
           cd scraper
           echo "=== Starting Daily Stats Scraper ==="
